[tool.poetry]
name = "gridappsd-2030_5"
version = "0.1.0"
description = ""
authors = ["C. Allwardt <3979063+craig8@users.noreply.github.com>"]
packages = [
    { include = "ieee_2030_5" }
]

[tool.poetry.dependencies]
python = "^3.8"
pvlib = "^0.9.0"
matplotlib = "^3.5.1"
gridappsd-python = {path = "../gridappsd-python", develop = true}
Flask = "^2.0.3"
pickleDB = "^0.9.2"
xsdata = {extras = ["cli"], version = "^22.3"}
tzlocal = "^4.2"
cryptography = "^37.0.2"
pyOpenSSL = "^22.0.0"
dataclasses-json = "^0.5.7"


[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapfignore]
ignore_patterns = [
    ".venv/**",
    ".pytest_cache/**",
    "dist/**",
    "docs/**"
]

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
column_limit = 99
split_before_logical_operator = true
