[metadata]
name = gridappsd-2030_5
description = Server for 2030.5 system in GridAPPS-D
description-file = README.md
description-content-type = text/markdown
author = The GridAPPS-D Team
author-email = grid.apps.d@pnnl.gov
license = Apache 2
keywords = gridappsd, 2030.5, server,  iot platform, building automation, agent framework
project_urls =
  Bug Reports = https://github.com/GRIDAPPSD/gridappsd-2030_5/issues
  Source = https://github.com/VOLTTRON/volttron-server/

# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers=
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 3 - Alpha
    # Indicate who your project is intended for
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Home Automation
    Topic :: Software Development :: Embedded Systems
    # Pick your license as you wish
    License :: OSI Approved :: Apache Software License
    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    # These classifiers are *not* checked by 'pip install'. See instead
    # 'python_requires' below.
    Programming Language :: Python :: 3.8

;[files]
;packages =
;  volttron
;
;[entry_points]
;console_scripts =
;    volttron = volttron.server.__main__:main